--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -18,8 +18,7 @@
         <label for="image" class="form-label">Upload Listing Image</label>
         <input
         name="listing[image]"
-        type="file"  class="form-control"/>
-        required
+        type="file"  class="form-control" required/>
        </div>
     
        <div class="row">
