--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -22,7 +22,12 @@
   font-size: 0.8rem;
   
 }
-
+.navbar-bg{
+  background-color: #fff;
+}
+.navbar-item-center{
+  text-align: center;
+}
 
 
 </style>
@@ -37,19 +42,19 @@
        data-bs-target="#navbarNavAltMarkup">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link" href="/listings">Explore</a> 
+      <div class="collapse navbar-collapse  navbar-item-center" id="navbarNavAltMarkup"  >
+        <div class="navbar-nav navbar-bg">
+          <a class="nav-link " href="/listings">Explore</a> 
         </div>
 
-        <div class="navbar-nav ms-auto">
+        <div class="navbar-nav ms-auto navbar-bg">
           <form class="d-flex" role="search">
             <input class="form-control me-2 search-input" type="search" placeholder="Search Destinations">
             <button class="btn search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search</button>
           </form>
         </div>
 
-        <div class="navbar-nav ms-auto">  
+        <div class="navbar-nav ms-auto navbar-bg">  
           <a class="nav-link" href="/listings/new">Airbnb your home</a> 
           <% if(!currUser) { %>
           <a class="nav-link"  href="/signup"><b>Sign Up</b></a>
